# NaeNae

./: Cargo.toml  LICENSE  README.md
examples/: README.md  best_counter.sh  best_counter.toml  fake_errors.sh  fake_errors.toml  mixed_progress.sh  mixed_progress.toml  slow_counter.sh  slow_counter.toml
src/: cli.rs  config.rs  formatting.rs  main.rs  notifier.rs  procfs.rs  rules.rs  run.rs
