[package]
name = "naenae"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
portable-pty = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
